syntax = "proto3";

package stream;

service TestStream {
  rpc StreamCall(InputStream) returns (stream OutputStream);
}

message InputStream {}
message OutputStream {}
